--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "heroku": "^7.31.0",
+    "path": "^0.12.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.0",
@@ -14,7 +17,7 @@
     "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -33,5 +36,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NenadZivotic/food-recipes-app.git"
+  },
+  "author": "Nenad Zivotic",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NenadZivotic/food-recipes-app/issues"
+  },
+  "homepage": "https://github.com/NenadZivotic/food-recipes-app#readme"
 }
