--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "heroku": "^7.31.0",
+    "node": "^12.11.0",
     "path": "^0.12.7",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -14,11 +15,10 @@
     "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.1.2",
     "sweetalert2": "^8.17.6",
-    "uuid": "^3.3.3",
-    "node": "14.4.0"
+    "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
